--- a/www/css/mycss.css
+++ b/www/css/mycss.css
@@ -28,6 +28,14 @@ a {text-decoration: none;}
 	text-align: center;
 }
 
+#place_holder {
+	margin: 0 auto;
+	width: 100px;
+	height: 100px;
+	background: transparent;
+	padding-bottom: 5px;
+}
+
 #time {
 	line-height: 2em;
 }
