--- a/www/css/mycss.css
+++ b/www/css/mycss.css
@@ -3,7 +3,11 @@
 
 a {text-decoration: none;}
 
-.wrap {white-space: normal !important;}
+.wrap {	text-overflow: initial !important;
+		overflow: visible !important;
+		white-space: normal !important;
+}
+
 .clear { clear: both;}
 .float_l { float: left; }
 .float_r { float: right; }
@@ -16,6 +20,14 @@ a {text-decoration: none;}
 .green{
 	background-color:  #7CD100;
 	border: 1px solid #DADDE2;	
+}
+
+.redWhite {
+		color:  #E32700;
+}
+
+.greenWhite{
+	color:  #7CD100;
 }
 
 					/*HOME*/
