--- a/www/css/mycss.css
+++ b/www/css/mycss.css
@@ -90,7 +90,8 @@ a {text-decoration: none;}
 
 .emphasize { background-color: #E9EAED;}
 
-
+.containing-element 
+.ui-slider-switch { width: 7em !important }
 
 
 .completed_count {
@@ -116,7 +117,7 @@ a {text-decoration: none;}
 	font-weight: bold;
 	width: 80%;
 	height: 100px;
-	color: #ff0000;
+	color: #3388cc;
 }
 
 #time {
